* Make period's invoice sequences optional and use fiscal year's ones if empty
* Cancel state delete or cancel existing move on Invoice
* Create draft move for Supplier Invoice when validated
* Rename Invoice Proforma state into Validated
* Rename Invoice Opened state into Posted

Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)

Version 2.4.0 - 2012-04-23
* Bug fixes (see mercurial logs for details)
* Add divisor field to Payment Term Lines
* Allow setting months, weeks, days as well as month, weekday and day in
  Payment Term Lines
* Rename field payment_term to customer_payment_term

Version 2.2.0 - 2011-10-24
* Bug fixes (see mercurial logs for details)

Version 2.0.0 - 2011-04-27
* Bug fixes (see mercurial logs for details)
* Add field currency_date to set the date for the rate calculation
* Change get_move_line on Invoice Line and Tax to return a list of values
  instead of values

Version 1.8.0 - 2010-11-01
* Bug fixes (see mercurial logs for details)

Version 1.6.0 - 2010-05-13
* Bug fixes (see mercurial logs for details)
* Add default search value on invoice
* Remove egenix-mx-base and replace it by python-dateutil

Version 1.4.0 - 2009-10-19
* Bug fixes (see mercurial logs for details)
* Set invoice date when invoice is opened
* Add invoice number to report name

Version 1.2.0 - 2009-04-20
* Bug fixes (see mercurial logs for details)
* Add accounting date on invoice
* Use amount_to_pay if amount_to_pay_today is zero in pay invoice wizard
* Use reference to taxes for invoice line in invoice report
* Add mechanism for invoice line standalone
* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release